Fixed links leading to documentation and download

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
                                 those who are comfortable using a computer. It is built by teens, for teens.
                             </p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
-                                <a class="btn btn-outline-light btn-lg px-4" href="#!">Download Installer</a>
+                                <a class="btn btn-primary btn-lg px-4 me-sm-3"
+                                    href="https://jovarkos-docs.netlify.app/#/">Get Started</a>
+                                <a class="btn btn-outline-light btn-lg px-4" href="download.html">Download Installer</a>
                             </div>
                         </div>
                     </div>
@@ -261,7 +262,7 @@
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                 <div class="col-auto">
                     <div class="small m-0 text-white">Copyright &copy; JovarkOS Development Team 2021 <span
-                            class="text-muted">Licensed under MIT</span> </div>
+                            class="text-muted">Site Licensed under MIT</span> </div>
                 </div>
                 <div class="col-auto">
                     <a class="link-light small" href="#!">Privacy</a>
