Update about page and links

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-10 col-xl-7">
                         <div class="text-center">
-                            <div class="fs-4 mb-4 fst-italic">"We would like the JovarkOS project to be a place where
+                            <div class="fs-4 mb-4 fst-italic">"I would like the JovarkOS project to be a place where
                                 teens just starting a career in technolgy can build their skills and work as a team on
                                 something we all love - GNU/Linux."</div>
                             <div class="d-flex align-items-center justify-content-center">
@@ -128,7 +128,7 @@
                                 <div class="fw-bold">
                                     Lucas Burlingham
                                     <span class="fw-bold text-primary mx-1">/</span>
-                                    Head of Development, on behalf of the JovarkOS Development Team
+                                    Head of the Development Team
                                 </div>
                             </div>
                         </div>
@@ -241,9 +241,10 @@
                             <div class="text-white-50">Sign up for our newsletter for the latest updates. (Coming
                                 soon...)</div>
                         </div>
+                        <!-- placeholder="Email address... -->
                         <div class="ms-xl-4">
                             <div class="input-group mb-2">
-                                <input class="form-control" type="text" placeholder="Email address..."
+                                <input class="form-control" type="text" placeholder="Coming soon..."
                                     aria-label="Email address..." aria-describedby="button-newsletter" disabled />
                                 <button class="btn btn-outline-light" id="button-newsletter" type="button" disabled>Sign
                                     up</button>
