--- a/download.html
+++ b/download.html
@@ -11,6 +11,14 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- FontAwesome 5.15.3 CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- (Optional) Use CSS or JS implementation -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
+        integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 </head>
@@ -92,7 +100,8 @@
                                         Help over remote connection
                                     </li>
                                 </ul>
-                                <div class="d-grid"><a class="btn btn-outline-primary" href="#!">Choose plan</a></div>
+                                <div class="d-grid"><a class="btn btn-outline-primary" href="#!">Download</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -133,7 +142,9 @@
                                         Access to Discord Support server <span class="text-muted fw-light">*</span>
                                     </li>
                                 </ul>
-                                <div class="d-grid"><a class="btn btn-primary" href="#!" disabled>Choose plan</a></div>
+                                <div class="d-grid"><a class="btn btn-primary"
+                                        href="https://www.paypal.com/donate?hosted_button_id=Y8KLL29RPBMDG"
+                                        disabled>Choose plan <i class="fab fa-paypal"></i></a></div>
                             </div>
                         </div>
                     </div>
@@ -159,7 +170,9 @@
                                         "Contributor" Status
                                     </li>
                                 </ul>
-                                <div class="d-grid"><a class="btn btn-outline-primary" href="#!">Choose plan</a></div>
+                                <div class="d-grid"><a class="btn btn-outline-primary"
+                                        href="https://www.paypal.com/donate?hosted_button_id=Y8KLL29RPBMDG"
+                                        disabled>Choose plan <i class="fab fa-paypal"></i></a></div>
                             </div>
                         </div>
                     </div>
