Update navbar, footer, links

--- a/about.html
+++ b/about.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description"
+        content="About the JovarkOS Development Team. JovarkOS is an Arch-based GNU/Linux distribution offering stability, usability, and speed, in that order. Join us today!" />
+    <meta name="author" content="JovarkOS Development Team, Lucas Burlingham" />
     <title>JovarkOS - About</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -28,7 +29,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-5">
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">JovarkOS</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation"><span
@@ -36,24 +37,18 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-                        <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                <li><a class="dropdown-item" href="blog-home.html">Blog Home</a></li>
-                                <li><a class="dropdown-item" href="blog-post.html">Blog Post</a></li>
-                            </ul>
+                        <li class="nav-item"><a class="nav-link" href="download.html">Download</a></li>
+                        <li class="nav-item"><a class="nav-link"
+                                href="https://jovarkos-docs.netlify.app/#/">Documentation</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
-                                <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
-                                <li><a class="dropdown-item" href="portfolio-item.html">Portfolio Item</a></li>
+                            <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">Media</a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
+                                <li><a class="dropdown-item" href="https://twitter.com/jovarkos">Twitter</a></li>
+                                <li><a class="dropdown-item" href="screenshots.html">Screenshots</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -78,12 +73,12 @@
                 </div>
             </div>
         </header>
-        <!-- About section one-->
+        <!-- history section -->
         <section class="py-5 bg-light" id="scroll-target">
             <div class="container px-5 my-5">
                 <div class="row gx-5 align-items-center">
-                    <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0"
-                            src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/jovarkos-settings.png"
+                            alt="..." /></div>
                     <div class="col-lg-6">
                         <h2 class="fw-bolder">Our History</h2>
                         <p class="lead fw-normal text-muted mb-0">JovarkOS used to be based on the latest version of
@@ -93,12 +88,12 @@
                 </div>
             </div>
         </section>
-        <!-- About section two-->
+        <!-- why teens section -->
         <section class="py-5">
             <div class="container px-5 my-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0"
-                            src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                            src="assets/gaming.png" alt="..." /></div>
                     <div class="col-lg-6">
                         <h2 class="fw-bolder">Why teens?</h2>
                         <p class="lead fw-normal text-muted mb-0">Teens are the people who will shape the future. By
@@ -121,7 +116,7 @@
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4"
                                 src="https://golca.org/resources/profile.jpg"
-                                alt="Lucas Burlingham's Profile Picture" />
+                                alt="Lucas Burlingham's GitHub Profile Picture" />
                             <h5 class="fw-bolder">Lucas Burlingham</h5>
                             <div class="fst-italic text-muted">Founder &amp; Head of Development</div>
                         </div>
@@ -129,23 +124,26 @@
                     <div class="col mb-5 mb-5 mb-xl-0">
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4"
-                                src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
+                                src="https://avatars.githubusercontent.com/u/53598550?v=4"
+                                alt="cliffniff's GitHub Profile picture" />
                             <h5 class="fw-bolder">cliffniff</h5>
-                            <div class="fst-italic text-muted">GNOME Extension Developer</div>
+                            <div class="fst-italic text-muted">Freelance Developer</div>
                         </div>
                     </div>
                     <div class="col mb-5 mb-5 mb-sm-0">
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4"
-                                src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                            <h5 class="fw-bolder">Toribio Nerthus</h5>
-                            <div class="fst-italic text-muted">Operations Manager</div>
+                                src="https://avatars.githubusercontent.com/u/72270531?v=4"
+                                alt="AmoldyBuffalo's GitHub Profile picture" />
+                            <h5 class="fw-bolder">AmoldyBuffalo</h5>
+                            <div class="fst-italic text-muted">Student, Youtuber</div>
                         </div>
                     </div>
                     <div class="col mb-5">
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4"
-                                src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
+                                src="https://d1ras9cbx5uamo.cloudfront.net/eyJidWNrZXQiOiAiY29tLm51bWVyYWRlIiwgImtleSI6ICJpbnN0cnVjdG9ycy9mOWNiZWM2ODI3NjE0MTBmOGM5OWNlYjUwYTc0MGY3MC5wbmciLCAiZWRpdHMiOiB7InJlc2l6ZSI6IHsid2lkdGgiOiAyNTYsICJoZWlnaHQiOiAyNTZ9fX0="
+                                alt="Generic Profile picture" />
                             <h5 class="fw-bolder">You</h5>
                             <div class="fst-italic text-muted"><a href="contact.html">Join us today!</a></div>
                         </div>
@@ -159,7 +157,8 @@
         <div class="container px-5">
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                 <div class="col-auto">
-                    <div class="small m-0 text-white">Copyright &copy; Your Website 2021</div>
+                    <div class="small m-0 text-white">Copyright &copy; JovarkOS Development Team 2021 <span
+                            class="text-muted">Site Licensed under MIT</span> </div>
                 </div>
                 <div class="col-auto">
                     <a class="link-light small" href="#!">Privacy</a>
