--- a/download.html
+++ b/download.html
@@ -38,15 +38,18 @@
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="download.html">Download</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="download.html">Download</a></li>
                         <li class="nav-item"><a class="nav-link"
                                 href="https://jovarkos-docs.netlify.app/#/">Documentation</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Social Media</a>
+                                data-bs-toggle="dropdown" aria-expanded="false">Media</a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                <li><a class="dropdown-item" href="https://twitter.com/jovarkos">Twitter</a></li>
+                                <li><a class="dropdown-item" href="https://twitter.com/jovarkos"><i
+                                            class="fab fa-twitter"></i> Twitter</a></li>
+                                <li><a class="dropdown-item" href="screenshots.html"><i class="fas fa-desktop"></i>
+                                        Screenshots</a></li>
                             </ul>
                         </li>
                     </ul>
