--- a/contact.html
+++ b/contact.html
@@ -121,13 +121,8 @@
         <div class="container px-5">
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                 <div class="col-auto">
-                    <div class="small m-0 text-white">Copyright &copy; Your Website 2021</div>
-                    <div class="small m-0 text-muted">TWITTER,
-                        TWEET, RETWEET and the
-                        Twitter
-                        Bird logo are trademarks of
-                        Twitter
-                        Inc. or its affiliates.</div>
+                    <div class="small m-0 text-white">Copyright &copy; JovarkOS Development Team 2021 <span
+                            class="text-muted">Site Licensed under MIT</span> </div>
                 </div>
                 <div class="col-auto">
                     <a class="link-light small" href="#!">Privacy</a>
