Added amoldybuffalo's profile pic

--- a/about.html
+++ b/about.html
@@ -114,8 +114,7 @@
                 <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5 mb-5 mb-xl-0">
                         <div class="text-center">
-                            <img class="img-fluid rounded-circle mb-4 px-4"
-                                src="https://golca.org/resources/profile.jpg"
+                            <img class="img-fluid rounded-circle mb-4 px-4" src="assets/profile.jpg"
                                 alt="Lucas Burlingham's GitHub Profile Picture" />
                             <h5 class="fw-bolder">Lucas Burlingham</h5>
                             <div class="fst-italic text-muted">Founder &amp; Head of Development</div>
@@ -132,8 +131,7 @@
                     </div>
                     <div class="col mb-5 mb-5 mb-sm-0">
                         <div class="text-center">
-                            <img class="img-fluid rounded-circle mb-4 px-4"
-                                src="https://avatars.githubusercontent.com/u/72270531?v=4"
+                            <img class="img-fluid rounded-circle mb-4 px-4" src="assets/amoldybuffalo.png"
                                 alt="AmoldyBuffalo's GitHub Profile picture" />
                             <h5 class="fw-bolder">AmoldyBuffalo</h5>
                             <div class="fst-italic text-muted">Student, Youtuber</div>
