Fix restricted access image to local copy

--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
                                 teens just starting a career in technolgy can build their skills and work as a team on
                                 something we all love - GNU/Linux."</div>
                             <div class="d-flex align-items-center justify-content-center">
-                                <img class="rounded-circle me-3 w-25 p-3"
-                                    src="https://www.golca.org/resources/profile.jpg"
+                                <img class="rounded-circle me-3 w-25 p-3" src="assets/profile.jpg"
                                     alt="Lucas Burlingham's Profile Picture" />
                                 <div class="fw-bold">
                                     Lucas Burlingham
