--- a/download.html
+++ b/download.html
@@ -103,7 +103,8 @@
                                         Help over remote connection
                                     </li>
                                 </ul>
-                                <div class="d-grid"><a class="btn btn-outline-primary" href="#!">Download</a>
+                                <div class="d-grid"><a class="btn btn-outline-primary"
+                                        href="https://97.107.133.153/jovarkos-2021.09.12-x86_64.iso">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -146,7 +147,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid"><a class="btn btn-primary"
-                                        href="https://www.paypal.com/donate?hosted_button_id=Y8KLL29RPBMDG"
+                                        href="https://www.paypal.com/donate?hosted_button_id=LUVK5HF3NWXK2"
                                         disabled>Choose plan <i class="fab fa-paypal"></i></a></div>
                             </div>
                         </div>
@@ -174,7 +175,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid"><a class="btn btn-outline-primary"
-                                        href="https://www.paypal.com/donate?hosted_button_id=Y8KLL29RPBMDG"
+                                        href="https://www.paypal.com/donate?hosted_button_id=LUVK5HF3NWXK2"
                                         disabled>Choose plan <i class="fab fa-paypal"></i></a></div>
                             </div>
                         </div>
