Add discord server

--- a/contact.html
+++ b/contact.html
@@ -77,8 +77,8 @@
                                     </div>
                                     <div class="card-body">
                                         <p class="card-text">Fun and informational server for JovarkOS</p>
-                                        <button href="#" class="btn btn-outline-primary card-link" disabled>Join!
-                                            (Coming Soon!)</button>
+                                        <button href="https://discord.gg/8jabsmuyU3"
+                                            class="btn btn-outline-primary card-link">Join!</button>
                                     </div>
                                 </div>
                             </div>
@@ -103,7 +103,7 @@
                                     <div class="card-body">
                                         <blockquote class="blockquote mb-0">
                                             <p class="card-title">Still using Email?</p>
-                                            <p class="card-subtitle text-muted mb-2">We do too</p>
+                                            <p class="card-subtitle text-muted mb-2 fst-italic fs-6">We do too...</p>
                                             <a class="btn btn-outline-secondary"
                                                 href="mailto:lucas@lucasburlingham.me">Email us!</a>
                                         </blockquote>
