--- a/download.html
+++ b/download.html
@@ -104,7 +104,7 @@
                                     </li>
                                 </ul>
                                 <div class="d-grid"><a class="btn btn-outline-primary"
-                                        href="https://97.107.133.153/jovarkos-2021.09.12-x86_64.iso">Download</a>
+                                        href="http://97.107.133.153/jovarkos-2021.09.12-x86_64.iso">Download</a>
                                 </div>
                             </div>
                         </div>
