--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                     <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5"
-                            src="https://peaceful-brown-d2e37c.netlify.app/images/jovarkos-desktop.jpg" alt="..." />
+                            src="assets/jovarkos-desktop.jpg" alt="..." />
                     </div>
                 </div>
             </div>
