--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
                             <img class="img-fluid rounded-circle mb-4 px-4" src="assets/amoldybuffalo.png"
                                 alt="AmoldyBuffalo's GitHub Profile picture" />
                             <h5 class="fw-bolder">AmoldyBuffalo</h5>
-                            <div class="fst-italic text-muted">Student, Youtuber</div>
+                            <div class="fst-italic text-muted">Student &amp; Youtuber</div>
                         </div>
                     </div>
                     <div class="col mb-5">
